@@ -33,6 +33,7 @@ Version 4.3  [ under development ]
             - Better logging.
             - Only writes .rga data files for cases in which at least
               one triangulation was found.
+            - New option --dryrun for a quick overview of the search space.
 
 Version 4.2  [ 7 July, 2005 ]
 
